Trying to fix config-toggle on mobile version

--- a/src/app/adventures/interactives/roll-a-dice/roll-a-dice.component.scss
+++ b/src/app/adventures/interactives/roll-a-dice/roll-a-dice.component.scss
@@ -113,6 +113,10 @@
     border-radius: calc(var(--responsiveUnit) * 4);
     cursor: pointer;
 
+    &, * {
+      @include allVendors(user-select, none);
+    }
+
     i {
       position: absolute;
       bottom: 0;
